force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/Asset_Finance_AMBIT_Contract__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AFAMBITContract</externalName>
    <label>Asset Finance AMBIT Contract</label>
    <pluralLabel>Asset Finance AMBIT Contract</pluralLabel>
</CustomObject>