force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Asset_Finance_AMBIT__c.field-meta.xml
<CustomField>
    <fullName>Asset_Finance_AMBIT__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Lookup with AMBIT </description>
    <externalDeveloperName>AMBITId</externalDeveloperName>
    <label>Asset Finance AMBIT</label>
    <length>18</length>
    <referenceTo>Asset_Finance_AMBIT__x</referenceTo>
    <relationshipLabel>Contract</relationshipLabel>
    <relationshipName>Asset_Finance_AMBIT_Contract</relationshipName>
    <type>ExternalLookup</type>
</CustomField>