force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Contract Number </description>
    <externalDeveloperName>ContractNumber</externalDeveloperName>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>