force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_EBD</complianceGroup>
    <description>Lookup to Customer</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Finance AMBIT Contracts</relationshipLabel>
    <relationshipName>Asset_Finance_AMBIT_Contract</relationshipName>
    <type>IndirectLookup</type>
</CustomField>