force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Date Opened </description>
    <externalDeveloperName>OpenedDate</externalDeveloperName>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>