force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Expiry Date </description>
    <externalDeveloperName>Expires</externalDeveloperName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>