force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Government_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Government_Guarantee__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Government Guarantee </description>
    <externalDeveloperName>GovernmentGuarantee</externalDeveloperName>
    <label>Government Guarantee</label>
    <type>Checkbox</type>
</CustomField>