force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Interest Rate </description>
    <externalDeveloperName>IntRate</externalDeveloperName>
    <label>Interest Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>