force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Interest Type </description>
    <externalDeveloperName>IntType</externalDeveloperName>
    <label>Interest Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>