force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Net_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Outstanding_Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Net Outstanding Amount</description>
    <externalDeveloperName>Amount</externalDeveloperName>
    <label>Net Outstanding Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>