force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Residual_Value__c.field-meta.xml
<CustomField>
    <fullName>Residual_Value__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Residual Value</description>
    <externalDeveloperName>ResidualValue</externalDeveloperName>
    <label>Residual Value ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>