force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Term (Months)</description>
    <externalDeveloperName>LoanTermMonths</externalDeveloperName>
    <label>Loan Term (Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>