force-app/main/default/objects/Asset_Finance_AMBIT_Contract__x/fields/Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Term_Years__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Term (Years)</description>
    <externalDeveloperName>LoanTermYears</externalDeveloperName>
    <label>Loan Term (Years)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>